--- a/prize-draw/src/main/resources/application.properties
+++ b/prize-draw/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=prizedrawdb
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=123
+
+cors.origins=${CORS_ORIGIN:http://localhost:5173}
